--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Лазиз</h1>
+    <h1>khudoyberdiyev ulugbek</h1>
 
     <div class="wrapper">
       <div class="box">
