--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="wrapper">
       <div class="box">
         <h2>Homework</h2>
-        <a target="_blank" class="btn" href="">Homework 1</a>
+        <a target="_blank" class="btn" href="https://ulugbek705705.github.io/homework-1/">Homework 1</a>
         <a target="_blank" class="btn" href="">Homework 2</a>
         <a target="_blank" class="btn" href="">Homework 3</a>
         <a target="_blank" class="btn" href="">Homework 4</a>
